<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.8</version>
    </parent>
    <groupId>no.sanderolin.boligbot</groupId>
    <artifactId>boligbot-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>boligbot-backend</name>
    <packaging>pom</packaging>
    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.38</lombok.version>
        <liquibase.version>4.33.0</liquibase.version>
        <postgresql.version>42.7.7</postgresql.version>
        <jakarta.persitence.version>3.2.0</jakarta.persitence.version>
        <jakarta.validation.version>3.1.1</jakarta.validation.version>
        <spring.retry.version>2.0.12</spring.retry.version>
        <jjwt.version>0.12.7</jjwt.version>
        <apache.commons.version>1.28.0</apache.commons.version>
        <testcontainers.version>1.21.3</testcontainers.version>
        <springdoc.version>2.8.11</springdoc.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.18.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>dao</module>
        <module>housing-import</module>
        <module>service</module>
        <module>web</module>
        <module>app</module>
        <module>api-tests</module>
    </modules>
</project>
